--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run dev",
     "rollup": "rollup -c --bundleConfigAsCjs"
   },
   "keywords": [
@@ -15,18 +14,25 @@
     "notifications"
   ],
   "author": "Blackbobs",
+  "github": "https://github.com/Blackbobs/min-toast",
   "license": "MIT",
+  "dependencies": {
+    "rollup": "^4.30.1"
+  },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-icons": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/estree": "^1.0.6",
     "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "@types/resolve": "^1.20.6",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "rollup-plugin-dts": "^6.1.1",
@@ -34,8 +40,5 @@
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1",
     "typescript": "^4.5.0"
-  },
-  "dependencies": {
-    "rollup": "^4.30.1"
   }
 }
