--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "min-toast",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "A customizable toast notification library for React.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -37,6 +37,7 @@
     "postcss": "^8.5.1",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.8.1",
     "typescript": "^4.5.0"
